[gd_scene load_steps=9 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://theme_solid.tres" type="Theme" id=2]
[ext_resource path="res://assets/font/font_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/icons/replay.png" type="Texture" id=4]
[ext_resource path="res://scenes/game/ui/ui.gd" type="Script" id=7]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, -0.0425537, 0, 0, Vector2( 0.940909, 0.395455 ), -3.04, -3.04, 0, 0, Vector2( 0.995454, 0.0409091 ), -11.2, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 1.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 25.0
gravity = Vector3( 0, 200, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 2 )
hue_variation = -1.0
hue_variation_random = 1.0

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="TopLeft" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="TopLeft"]
margin_right = 89.0
margin_bottom = 51.0
mouse_filter = 2
custom_constants/margin_top = 12
custom_constants/margin_left = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TopLeft/MarginContainer2"]
margin_left = 16.0
margin_top = 12.0
margin_right = 160.0
margin_bottom = 75.0

[node name="LevelTitle" type="Label" parent="TopLeft/MarginContainer2/VBoxContainer"]
margin_right = 144.0
margin_bottom = 39.0
text = "LevelTitle"

[node name="ChapterTitle" type="Label" parent="TopLeft/MarginContainer2/VBoxContainer"]
margin_top = 43.0
margin_right = 144.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 3 )
text = "ChapterTitle"

[node name="TopRight" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TopRight"]
grow_horizontal = 0
mouse_filter = 2
custom_constants/margin_right = 16
custom_constants/margin_top = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TopRight/MarginContainer"]
margin_top = 12.0
margin_right = 125.0
margin_bottom = 51.0
custom_constants/separation = 16
alignment = 2

[node name="Restart" type="TextureButton" parent="TopRight/MarginContainer/HBoxContainer"]
margin_right = 36.0
margin_bottom = 39.0
grow_horizontal = 0
texture_normal = ExtResource( 4 )

[node name="Back" type="Button" parent="TopRight/MarginContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 125.0
margin_bottom = 39.0
grow_horizontal = 0
text = "back"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnLevelComplete" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="OnLevelComplete"]
anchor_right = 1.0
grow_vertical = 0
custom_constants/margin_right = 48
custom_constants/margin_top = 48
custom_constants/margin_left = 48
custom_constants/margin_bottom = 48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="OnLevelComplete/MarginContainer"]
margin_left = 48.0
margin_top = 48.0
margin_right = 1232.0
margin_bottom = 182.0

[node name="VBoxContainer" type="VBoxContainer" parent="OnLevelComplete/MarginContainer/CenterContainer"]
margin_left = 495.0
margin_right = 689.0
margin_bottom = 134.0
custom_constants/separation = 24
alignment = 2

[node name="NextLevel" type="Button" parent="OnLevelComplete/MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 194.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "Next level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoMoreLevels" type="Label" parent="OnLevelComplete/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 194.0
margin_bottom = 134.0
text = "You rock!!"
align = 1

[node name="ConfettiLeft" type="Particles2D" parent="OnLevelComplete"]
position = Vector2( 500, -80 )
scale = Vector2( 10, 10 )
explosiveness = 0.92
randomness = 0.1
process_material = SubResource( 4 )

[node name="ConfettiRight" type="Particles2D" parent="OnLevelComplete"]
position = Vector2( 636.071, -105.198 )
scale = Vector2( 10, 10 )
explosiveness = 0.92
randomness = 0.1
process_material = SubResource( 4 )

[connection signal="pressed" from="TopRight/MarginContainer/HBoxContainer/Restart" to="." method="_on_redo_level"]
[connection signal="pressed" from="TopRight/MarginContainer/HBoxContainer/Back" to="." method="_on_back"]
[connection signal="pressed" from="OnLevelComplete/MarginContainer/CenterContainer/VBoxContainer/NextLevel" to="." method="_on_next_level"]
